--- a/src/components/PlayerDetails/PlayerDetails.module.css
+++ b/src/components/PlayerDetails/PlayerDetails.module.css
@@ -14,6 +14,7 @@
   height: 70px;
   width: 100%;
   font-size: 50px;
+  padding: 40px 0px 0px 0px;
   /* background-color: grey; */
 }
 
